fix: fix florene pugh on ios

--- a/css/styles.css
+++ b/css/styles.css
@@ -483,7 +483,7 @@ main {
   transform: scale(1.8) translateY(25%) translateX(5%);
 }
 .celebrities-main .celebrities-wrapper .celebrities-slider-wrapper .celebrity-card .celebrity-image-wrapper .celebrity-image#Florence-Pugh-img {
-  transform: scale(2) rotate(10deg) translateY(5%);
+  transform: scale(2.3) translateY(5%);
 }
 .celebrities-main .celebrities-wrapper .celebrities-slider-wrapper .celebrity-card .celebrity-image-wrapper .celebrity-image#Scarlett-Johansson-img {
   transform: scale(1.01) translateY(5%);
