--- a/scss/components/_celebrities.scss
+++ b/scss/components/_celebrities.scss
@@ -160,7 +160,7 @@ $celebrity-card-height: 300px;
         transform: scale(1.8) translateY(25%) translateX(5%);
     }
     &#Florence-Pugh-img {
-        transform: scale(2) rotate(10deg) translateY(5%);
+        transform: scale(2.3) translateY(5%);
     }
     &#Scarlett-Johansson-img {
         transform: scale(1.01) translateY(5%);
